[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "davibatschke",email = "davibatschkedev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14, <4.0"
dependencies = [
    "fastapi[standard] (>=0.135.2,<0.136.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.7,<0.16.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "typos (>=1.44.0,<2.0.0)"
]
